fix: overlap in minimized composer

--- a/less/forum/Composer.less
+++ b/less/forum/Composer.less
@@ -269,6 +269,11 @@
     .fullScreen & {
       margin-bottom: 20px;
     }
+
+    .minimized & {
+      overflow: hidden;
+      margin-right: 32px;
+    }
   }
   .Composer-content {
     padding: 20px 20px 0;
